GET and POST reqiuests are working
For Medicine and Customer
