# backend/api/openapi.yaml
@@ -9,13 +9,13 @@ servers:
   - url: http://localhost:3010/v0
 
 paths:
-  /medicine/{customer}:
+  /medicine/{googleID}:
     get:
       description: Show all medicine from customers
       parameters:
-      - name: customer
+      - name: googleID
         in: path
-        description: customer ID
+        description: googleID
         required: true
         schema:
           $ref: '#/components/schemas/ID'
@@ -33,6 +33,13 @@ paths:
 
     post:
       description: Create new medicine for customer
+      parameters:
+      - name: googleID
+        in: path
+        description: googleID
+        required: true
+        schema:
+          $ref: '#/components/schemas/ID'
       requestBody:
         description: New Medicine
         required: true
@@ -40,13 +47,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Medicine'
-      parameters:
-      - name: customer
-        in: path
-        description: customer ID
-        required: true
-        schema:
-          $ref: '#/components/schemas/ID'
       responses:
         201:
           description: Application response
@@ -57,7 +57,7 @@ paths:
         409:
           description: Invalid Medicine
 
-  /customer:
+  /customer/{googleID}:
     get:
       description: Show the customer Info
       parameters:
@@ -80,6 +80,13 @@ paths:
           description: Customer not found
     post:
       description: Create new customer
+      parameters:
+      - name: googleID
+        in: path
+        description: googleID
+        required: true
+        schema:
+          $ref: '#/components/schemas/ID'
       requestBody:
         description: New Customer
         required: true
@@ -118,8 +125,6 @@ components:
     Customer:
       type: object
       properties:
-        googleID:
-          type: string
         medicineArray:
           $ref: '#/components/schemas/MedicineArray'
     
