# backend/src/controllers/medicine.js
@@ -1,27 +1,27 @@
 const MedicineInfo = require('../models/medicineInfo.js');
 const CustomerInfo = require('../models/customerInfo.js');
 
-// GET /medicine/:customer
+// GET /medicine/:googleID
 exports.getMedicine = async (req, res) => {
     try {
-        const customerID = req.params.customer;
-        const myCustomer = await CustomerInfo.findById(customerID);
-        res.status(200).json(myCustomer.medicineArray);
+        const googleID = req.params.googleID;
+        const myCustomer = await CustomerInfo.find({googleID: googleID});
+        res.status(200).json(myCustomer[0].medicineArray);
     } catch(error) {
         res.status(404).json({message: error.messasge});
     }
 };
 
-// POST /medicine/:customer
+// POST /medicine/:googleID
 exports.createMedicine = async (req, res) => {
     try {
         const newMedicine = new MedicineInfo(req.body);
-        const customerID = req.params.customer;
-        const myCustomer = await CustomerInfo.findById(customerID);
+        const googleID = req.params.googleID;
+        const myCustomer = await CustomerInfo.find({googleID: googleID});
         await newMedicine.save();
         req.body['id'] = newMedicine._id;
-        myCustomer['medicineArray'].push(req.body);
-        await myCustomer.save();
+        myCustomer[0].medicineArray.push(req.body);
+        await myCustomer[0].save();
         res.status(201).json(req.body);
     } catch(error) {
         res.status(409).json({message: error.message});
